jasper/force-app/main/default/objects/Contact/fields/Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Code__c</fullName>
    <formula>Account.Center_Code__c</formula>
    <label>Dealer Code</label>
    <type>Text</type>
</CustomField>