jasper/force-app/main/default/objects/Contact/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WM</fullName>
            </value>
            <value>
                <fullName>ASM</fullName>
            </value>
            <value>
                <fullName>CRE</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>GM</fullName>
            </value>
            <value>
                <fullName>Parts</fullName>
            </value>
            <value>
                <fullName>PDI</fullName>
            </value>
            <value>
                <fullName>RSM</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>Service Center</fullName>
            </value>
            <value>
                <fullName>SP</fullName>
            </value>
            <value>
                <fullName>Spares</fullName>
            </value>
            <value>
                <fullName>Spares Manager</fullName>
            </value>
            <value>
                <fullName>Technical Manager</fullName>
            </value>
            <value>
                <fullName>Technical Support</fullName>
            </value>
            <value>
                <fullName>Technical Trainer</fullName>
            </value>
            <value>
                <fullName>PS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>