jasper/force-app/main/default/objects/Contact/fields/Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Store_Name__c</fullName>
    <formula>IF(
    TEXT(Account.Type) = &quot;Dealer&quot; ||
    TEXT(Account.Type) = &quot;COCO Store&quot;,
    Account.Store_Name__c,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Name</label>
    <type>Text</type>
</CustomField>