jasper/force-app/main/default/objects/Contact/fields/Store_Type__c.field-meta.xml
<CustomField>
    <fullName>Store_Type__c</fullName>
    <formula>TEXT(Account.Store_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Type</label>
    <type>Text</type>
</CustomField>