jasper/force-app/main/default/objects/Contact/validationRules/phone_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>phone_validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(OR(REGEX(Phone, &quot;^[0-9]{10}&quot;)))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Enter 10 Digit Phone Number</errorMessage>
</ValidationRule>