jasper/force-app/main/default/objects/Contact/validationRules/Role_Type_and_Location_is_must.validationRule-meta.xml
<ValidationRule>
    <fullName>Role_Type_and_Location_is_must</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISBLANK( Dealer_Code__c )) &amp;&amp;
(
    ISPICKVAL( Role_Type__c , &quot;&quot;) ||
    ISBLANK( Location__c )
)</errorConditionFormula>
    <errorMessage>Role Type and Location are Mandatory</errorMessage>
</ValidationRule>